Add button with shadow

--- a/botão/style.css
+++ b/botão/style.css
@@ -24,3 +24,16 @@ div {
 .small-button {
     font-size: 0.9em;
 }
+
+
+/* input {
+    border: 1px solid #999;
+    box-shadow: 2px, 2px, 2px, rgba(0, 0, 0, 0.25) inset;
+    padding: 2px 5px;
+} */
+
+input {
+    border-color: #35861B;
+    box-shadow: 0 0 5px #35861B, 2px, 2px, 2px, rgba(0, 0, 0, 0.25) inset;
+    outline: none;
+}
